bug fix + repo for storageapi